hphp/test/zend/good/ext/session/tests/bug67972.php
<?php

(new SessionHandler)->create_sid();
