hphp/test/zend/bad/ext/spl/tests/SplTempFileObject_constructor_memory_lt1_variation.php
<?php
var_dump(new SplTempFileObject(-1));
?>